# dodecahedron

./: CMakeLists.txt  CMakePresets.json  README.md
include/glad/: glad.h
src/: frag_s.glsl  glad.c  main.cpp  shader_h.h  vertex_s.glsl
